2025-06-04T12:45:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15442651966 # 1018
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-04
* notice: last 14d: unq all: 26 51
* notice: prev accum: outdated-unq outdated-all / unq all: 4220 8936 / 4252 8982
* notice: next accum: outdated-unq outdated-all / unq all: 4220 8936 / 4256 8987
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [] / [2025-06-04]

2025-06-03T12:45:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15417672957 # 1016
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-03
* notice: last 14d: unq all: 23 46
* notice: prev accum: outdated-unq outdated-all / unq all: 4219 8934 / 4247 8972
* notice: next accum: outdated-unq outdated-all / unq all: 4220 8936 / 4252 8982
* notice: prev exec diff / last date diff / accum: unq all: +5 +10 -0 -0 / +5 +10 -0 -0 / 5 10
* notice: removed / changed dates: [2025-05-20] / [2025-06-03]

2025-06-03T01:49:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15406663381 # 1015
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-03
* notice: last 14d: unq all: 20 37
* notice: prev accum: outdated-unq outdated-all / unq all: 4215 8929 / 4243 8966
* notice: next accum: outdated-unq outdated-all / unq all: 4219 8934 / 4247 8972
* notice: prev exec diff / last date diff / accum: unq all: +4 +6 -0 -1 / +5 +7 -0 -0 / 5 7
* notice: removed / changed dates: [2025-05-19] / [2025-05-20 2025-06-02]

2025-06-02T12:44:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15392584337 # 1014