@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-05-23T01:46:21Z",
-  "count" : 12,
+  "timestamp" : "2025-06-05T01:48:14Z",
+  "count" : 11,
   "count_minmax" : [ 7, 12 ],
-  "count_decinc" : [ -0, +12 ],
+  "count_decinc" : [ -1, +12 ],
   "uniques" : 7,
   "uniques_minmax" : [ 5, 7 ],
   "uniques_decinc" : [ -0, +7 ]
