@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-04T12:45:45Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 4, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "timestamp" : "2025-06-05T01:48:14Z",
+  "count" : 9,
+  "count_minmax" : [ 5, 9 ],
+  "count_decinc" : [ -0, +9 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 4, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
