@@ -1,3 +1,12 @@
+2025-06-05T01:48:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15456535686 # 1019
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-05
+* notice: last 14d: unq all: 28 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 4220 8936 / 4256 8987
+* notice: next accum: outdated-unq outdated-all / unq all: 4220 8936 / 4259 8991
+* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -1 / +7 +9 -0 -0 / 7 9
+* notice: removed / changed dates: [] / [2025-05-22 2025-06-04]
+
 2025-06-04T12:45:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15442651966 # 1018
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-04
